syntax = "proto3";
package game_service;
option go_package = "github.com/domino14/liwords/rpc/api/proto/omgwords_service";

import "ipc/omgwords.proto";

// GameEventResponse doesn't need to have any extra data. The GameEvent API
// will still use sockets to broadcast game information.
message GameEventResponse {}

message TimePenaltyEvent { int32 points_lost = 1; }
message ChallengeBonusPointsEvent { int32 points_gained = 1; }
message CreateBroadcastGameRequest {
  // metadata

  // PlayerInfo for broadcast games do not need to be tied to a Woogles
  // UUID. These games are meant for sandbox/annotation/broadcast of
  // a typically IRL game.
  message PlayerInfo {
    string nickname = 1;
    string real_name = 2;
  }

  repeated PlayerInfo playersInfo = 1;
  string lexicon = 2;
  ipc.GameRules rules = 3;
  ipc.ChallengeRule challenge_rule = 4;
  // public will make this game public upon creation - i.e., findable
  // within the interface. Otherwise, a game ID is required.
  bool public = 5;
}

message CreateBroadcastGameResponse { string game_id = 1; }

message BroadcastGamePrivacy { bool public = 1; }

message GetGamesForEditorRequest {
  string user_id = 1;
  int32 limit = 2;
  int32 offset = 3;
  bool unfinished = 4;
}

message BroadcastGamesResponse {
  message BroadcastGame {
    string game_id = 1;
    string creator_id = 2;
    bool private = 3;
    bool finished = 4;
  }
  repeated BroadcastGame games = 1;
}

// GameEventService will handle our game event API. We can connect bots to
// this API, or use it for sandbox mode, or for live annotations, etc.
service GameEventService {
  // CreateBroadcastGame will create a game for Woogles broadcast
  rpc CreateBroadcastGame(CreateBroadcastGameRequest)
      returns (CreateBroadcastGameResponse);
  rpc SendGameEvent(ipc.ClientGameplayEvent) returns (GameEventResponse);
  // SendTimePenaltyEvent sends a time penalty event. It should be the
  // last event right before a game ends.
  rpc SendTimePenaltyEvent(TimePenaltyEvent) returns (GameEventResponse);
  // SendChallengeBonusEvent sends a bonus points event. When challenging
  // a play that is good, depending on the challenge rule a certain number
  // of points may be added to the play. Since broadcast games can reflect
  // real-life games, the number of points can be variable (for example,
  // 15 points for 5-pt challenge if 3 plays are challenged)
  rpc SendChallengeBonusEvent(ChallengeBonusPointsEvent)
      returns (GameEventResponse);

  rpc SetBroadcastGamePrivacy(BroadcastGamePrivacy) returns (GameEventResponse);

  rpc GetGamesForEditor(GetGamesForEditorRequest)
      returns (BroadcastGamesResponse);
}